# versioned-binary-serialization

./: .gitignore  CNAME  Cargo.toml  LICENSE  README.md  crates.js  flake.nix  help.html  index.html  search-index.js  settings.html  src-files.js
.github/workflows/: audit.yml  build.yml  build_nix.yml  build_windows.yml  debug_build.yml  lint.yml  update_nix.yml
search.desc/vbs/: vbs-desc-0-.js
src/: binary_serializer.rs  bincode_serializer.rs  error.rs  lib.rs  mod.rs  version.rs  versioned.rs  versioned_bincode_serializer.rs
src/vbs/: binary_serializer.rs.html  bincode_serializer.rs.html  lib.rs.html  version.rs.html  versioned.rs.html
src/versioned_binary_serialization/: binary_serializer.rs.html  bincode_serializer.rs.html  lib.rs.html  version.rs.html  versioned.rs.html
vbs/: all.html  index.html
vbs/binary_serializer/: index.html  trait.BinarySerializer.html
vbs/bincode_serializer/: index.html  struct.BincodeSerializer.html  struct.VersionChecker.html  struct.VersionedBincodeSerializer.html  trait.VersionedBinarySerializer.html
vbs/version/: index.html  sidebar-items.js  struct.StaticVersion.html  struct.Version.html  trait.StaticVersionType.html
vbs/versioned/: index.html  sidebar-items.js  trait.Versioned.html
versioned_binary_serialization/: all.html  index.html  sidebar-items.js  type.BinarySerializer.html  type.Serializer.html
versioned_binary_serialization/binary_serializer/: index.html  sidebar-items.js  trait.BinarySerializer.html
versioned_binary_serialization/bincode_serializer/: index.html  sidebar-items.js  struct.BincodeSerializer.html  struct.VersionChecker.html  struct.VersionedBincodeSerializer.html  trait.VersionedBinarySerializer.html
(+29 files in other folders)
