[package]
name = "vbs"
version = "0.1.3"
edition = "2021"
rust-version = "1.75.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
repository = "https://github.com/EspressoSystems/versioned-binary-serialization.git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
displaydoc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.4"
