[package]
name = "vbs"
version = "0.1.7"
edition = "2021"
rust-version = "1.75.0"
authors = ["Espresso Systems <hello@espressosys.com>"]
repository = "https://github.com/EspressoSystems/versioned-binary-serialization.git"
description = "Version-tagged serialization adaptor with compile-time version checking"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
derive_more = "0.99"
serde = { version = "1.0", features = ["derive"] }
